fix the refactor bug